tests/integration/security/test_artifacts/security-ae75b8a2494145f8974590/TestMutualTlsOrigination/no_client_certs/_test_context/DestinationRule.1743681857.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-sds-tls-credential-simple
spec:
  host: "external.external-4-11206.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: MUTUAL
          credentialName: tls-credential-simple
          sni: external.external-4-11206.svc.cluster.local
